crates/ruff_python_formatter/tests/snapshots/format@statement__import_from.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/statement/import_from.py
snapshot_kind: text
---
## Input
```python
from a import aksjdhflsakhdflkjsadlfajkslhf
from a import (
    aksjdhflsakhdflkjsadlfajkslhf,
)
from a import (
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa,
)
from a import (
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa,
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa,
)
from a import (
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa as dfgsdfgsd,
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa as sdkjflsdjlahlfd,
)
from aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa import *


from a import bar  # comment

from a import bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar  # comment

from a import (  # comment
    bar,
)

from a import (  # comment
    bar
)

from a import bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar, bar
# comment

from a import \
    (  # comment
    bar,
)

from tqdm .  auto import tqdm

# Regression test for https://github.com/astral-sh/ruff/issues/19138
from y import(e as#
r)
```

## Output
```python
from a import aksjdhflsakhdflkjsadlfajkslhf
from a import (
    aksjdhflsakhdflkjsadlfajkslhf,
)
from a import (
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa,
)
from a import (
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa,
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa,
)
from a import (
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa as dfgsdfgsd,
    aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa as sdkjflsdjlahlfd,
)
from aksjdhflsakhdflkjsadlfajkslhfdkjsaldajlahflashdfljahlfksajlhfajfjfsaahflakjslhdfkjalhdskjfa import *


from a import bar  # comment

from a import (
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
)  # comment

from a import (  # comment
    bar,
)

from a import (  # comment
    bar,
)

from a import (
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
    bar,
)
# comment

from a import (  # comment
    bar,
)

from tqdm.auto import tqdm

# Regression test for https://github.com/astral-sh/ruff/issues/19138
from y import (
    e as r,  #
)
```
