crates/ruff_python_formatter/tests/snapshots/format@statement__module_comment.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python



# hehehe >:)a
```

## Output
```python
# hehehe >:)a
```
