crates/ruff_python_formatter/tests/snapshots/format@statement__return.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input
```python

return len(self.nodeseeeeeeeee), sum(
    len(node.parents) for node in self.node_map.values()
)


return len(self.nodeseeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee), sum(
    len(node.parents) for node in self.node_map.values()
)


return (
    len(self.nodeseeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee), sum(
    len(node.parents) for node in self.node_map.values()
    )
)

# Regression tests for https://github.com/astral-sh/ruff/issues/8042
def f():
    return (
        self.get_filename() + ".csv" +
        "text/csv" +
        output.getvalue().encode("utf-8----------------"),
    )


def f():
    return (
        self.get_filename() + ".csv" + "text/csv",
        output.getvalue().encode("utf-8----------------")
    )

def f():
    return (
        self.get_filename() + ".csv",
        "text/csv",
        output.getvalue().encode("utf-8----------------")
    )


def f():
    return self.get_filename() + ".csv" + "text/csv" + output.getvalue().encode("utf-8----------------"),

def f():
    return self.get_filename() + ".csv" + "text/csv", output.getvalue().encode("utf-8----------------")

def f():
    return self.get_filename() + ".csv", "text/csv", output.getvalue().encode("utf-8----------------")
```

## Output
```python
return len(self.nodeseeeeeeeee), sum(
    len(node.parents)
    for node in self.node_map.values()
)


return len(
    self.nodeseeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
), sum(len(node.parents) for node in self.node_map.values())


return (
    len(self.nodeseeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee),
    sum(len(node.parents) for node in self.node_map.values()),
)


# Regression tests for https://github.com/astral-sh/ruff/issues/8042
def f():
    return (
        self.get_filename()
        + ".csv"
        + "text/csv"
        + output.getvalue().encode("utf-8----------------"),
    )


def f():
    return (
        self.get_filename() + ".csv" + "text/csv",
        output.getvalue().encode("utf-8----------------"),
    )


def f():
    return (
        self.get_filename() + ".csv",
        "text/csv",
        output.getvalue().encode("utf-8----------------"),
    )


def f():
    return (
        self.get_filename()
        + ".csv"
        + "text/csv"
        + output.getvalue().encode("utf-8----------------"),
    )


def f():
    return self.get_filename() + ".csv" + "text/csv", output.getvalue().encode(
        "utf-8----------------"
    )


def f():
    return (
        self.get_filename() + ".csv",
        "text/csv",
        output.getvalue().encode("utf-8----------------"),
    )
```
