crates/ruff_python_formatter/tests/snapshots/format@statement__while.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/ruff/statement/while.py
---
## Input
```python
while 34: # trailing test comment
    pass # trailing last statement comment

    # trailing while body comment

# leading else comment

else: # trailing else comment
    pass

    # trailing else body comment


while aVeryLongConditionThatSpillsOverToTheNextLineBecauseItIsExtremelyLongAndGoesOnAndOnAndOnAndOnAndOnAndOnAndOnAndOnAndOn: # trailing comment
    pass

else:
    pass

while (
    some_condition(unformatted, args) and anotherCondition or aThirdCondition
):  # comment
    print("Do something")


while (
    some_condition(unformatted, args) # trailing some condition
    and anotherCondition or aThirdCondition  # trailing third condition
):  # comment
    print("Do something")
```

## Output
```python
while 34:  # trailing test comment
    pass  # trailing last statement comment

    # trailing while body comment

# leading else comment

else:  # trailing else comment
    pass

    # trailing else body comment


while aVeryLongConditionThatSpillsOverToTheNextLineBecauseItIsExtremelyLongAndGoesOnAndOnAndOnAndOnAndOnAndOnAndOnAndOnAndOn:  # trailing comment
    pass

else:
    pass

while (
    some_condition(unformatted, args) and anotherCondition or aThirdCondition
):  # comment
    print("Do something")


while (
    some_condition(unformatted, args)  # trailing some condition
        and anotherCondition
        or aThirdCondition  # trailing third condition
):  # comment
    print("Do something")
```



